...

            <TextView
                android:id="@+id/editJobHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditTitle"
                        android:paddingHorizontal="15dp"
                        android:text="@string/title"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditCompany"
                        android:paddingHorizontal="15dp"
                        android:text="@string/company"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditCity"
                        android:paddingHorizontal="15dp"
                        android:text="@string/city"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/spinnerState"
                        android:paddingHorizontal="15dp"
                        android:text="@string/state"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditCostOfLiving"
                        android:paddingHorizontal="15dp"
                        android:text="@string/cost_of_living"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditYearlySalary"
                        android:paddingHorizontal="15dp"
                        android:text="@string/yearly_salary"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditYearlyBonus"
                        android:paddingHorizontal="15dp"
                        android:text="@string/yearly_bonus"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditWeeklyTelework"
                        android:paddingHorizontal="15dp"
                        android:text="@string/weekly_telework"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditLeaveTime"
                        android:paddingHorizontal="15dp"
                        android:text="@string/leave_time"
...
                        android:layout_weight="1"
                        android:gravity="end"
                        android:labelFor="@+id/txtEditGymAllowance"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp"
...

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
...
