<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/currentJobLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentJobHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_job"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="34sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/currentJobCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                app:strokeColor="@color/cardview_shadow_start_color"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:id="@+id/currentJobCardInnerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp">

                    <TextView
                        android:id="@+id/txtCurrentJobTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/software_engineer"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/currentJobSupportDetails"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtCurrentJobCompany"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/txtCurrentJobLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end" />
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btnEditCurrentJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="editCurrentJob"
                android:text="@string/edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/jobOffersHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_offers"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/txtNumOfOffers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0_offer_s"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnAddJobOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:onClick="addJobOffer"
                android:text="@string/add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCompareJobs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/compare_jobs" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:layout_weight="1"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>