<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="fill_parent" android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:hint="Compare Jobs" />
    <Button  android:id="@+id/btn_addSnipet"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnReturn"
        android:text="Compare" />
    <Button  android:id="@+id/btnReturn" android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Return to Main Menu" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_addSnipet"
        android:layout_below="@+id/txtTitle"


        android:drawSelectorOnTop="false" />


</RelativeLayout>